# unibos-server

./: .archiveignore  .gitignore  .gitignore.dev  .gitignore.manager  .gitignore.prod  .gitignore.server  .prodignore  .rsync-exclude  .rsyncignore  CHANGELOG.md  CLAUDE.md  DEPLOY_COMMANDS.md  DEVELOPMENT_LOG.md  Dockerfile  QUICK_MIGRATION_GUIDE.sh  README.md  ROADMAP.md  RULES.md  SOLITAIRE_CARD_DEALING_FIX_SUMMARY.md  TODO.md  TODO_RASPBERRY.md  TUI_TRANSFORMATION_SUMMARY.md  VERSION.json  VERSIONING_WORKFLOW.md  alembic.ini  deploy.sh  deploy_to_rocksteady.sh  docker-compose.yml  emergency_login.html  fix_remote_login.py  fix_remote_login.sh  install_cli_deps.sh  manual_login_test.html  oneliner_deploy.sh  pyproject.toml  rocksteady.config.json  rocksteady_config.sh  rocksteady_deploy.sh  rocksteady_monitor.sh  setup-dev.py  (+26 more)
archive/planning/: FUTURE_ROADMAP_v533.md  V533_IMPLEMENTATION_ROADMAP.md
backend/: VERSION.json  create_berkhatirli.py  create_solitaire_test_data.py  import_old_users.py  import_users.py  import_users_fixed.py  import_users_from_old_db.py  requirements-sqlite.txt  requirements.txt  requirements_minimal.txt  start.sh  start_backend.sh  start_emergency.sh  test_new_game_fix.html  test_solitaire_fix.html  test_solitaire_state.py
backend/unibos_backend/: urls.py
core/: version.py
core/cli/: interactive.py  main.py
core/cli-server/: __init__.py  main.py
core/cli_dev/: interactive.py  main.py
core/cli_server/: main.py
core/deployment/: rocksteady_deploy.sh
core/platform/: __init__.py
deployment/deployment/: README.md  __init__.py  node.py  rocksteady_deploy.sh  (+1 more)
docs/: 4_TIER_ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHIVE_PROTECTION_RULES.md  CLI_QUICK_REFERENCE.md  CLI_USAGE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANAGER_PROFILE.md  MANAGER_PROFILE_CHECKLIST.md  README.md  TUI_BUG_FIX_v534.md  TUI_HANDLERS_IMPLEMENTATION.md  TUI_NAVIGATION_BUG_FIX.md  TUI_QUICK_REFERENCE.md  TUI_SERVER_MANAGEMENT.md  VERSIONING_RULES.md
src/: VERSION.json  database_setup_wizard_fixed.py  main.py  public_server_manager.py  public_server_menu.py  public_server_menu_proper.py  system_info.py  version_manager.sh
tools/: README.md  archive_daily_check.sh
(+542 files in other folders)
