[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unibos"
dynamic = ["version"]
description = "UNIBOS - Your Personal Operating System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Berk Hatirli", email = "berk@hatirli.com"}
]
keywords = ["unibos", "backend", "framework", "platform"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "psutil>=5.9.0",
    "zeroconf>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Documentation = "https://github.com/unibosoft/unibos_dev/wiki"
Source = "https://github.com/unibosoft/unibos_dev"
Tracker = "https://github.com/unibosoft/unibos_dev/issues"
Changelog = "https://github.com/unibosoft/unibos_dev/blob/main/CHANGELOG.md"
Releases = "https://github.com/unibosoft/unibos_dev/releases"

[project.scripts]
unibos = "core.profiles.prod.main:main"
unibos-dev = "core.profiles.dev.main:main"
unibos-server = "core.profiles.server.main:main"
unibos-manager = "core.profiles.manager.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*"]
exclude = [
    "archive*",
    "deployment*",
    "data*",
    "*.venv*",
    "**/venv/**",
    "core.clients.web.venv*",
]

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}
